experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/DigitRoot.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/DigitRoot/DigitRoot.java:5: error: cannot find symbol
      @ ensures (\exists int k; k >= 0; \result == digitRootHelper(num, k));
                                                   ^
  symbol:   method digitRootHelper(int,int)
  location: class DigitRoot
1 error
1 warning
